--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,6 @@ jobs:
           export PGPASSWORD="$(aws rds generate-db-auth-token --hostname $RDSHOST --port 5432 --region us-east-1 --username stg-identity-user )"
           wget https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem
           psql "host=$RDSHOST port=5432 dbname=identitydb user=stg-identity-user password=$PGPASSWORD" sslrootcert=global-bundle.pem -c "SELECT * FROM  pg_catalog.pg_tables "
-          echo IDENTITY_POSTGRES_PASSWORD
+          echo $IDENTITY_POSTGRES_PASSWORD
           export IDENTITY_POSTGRES_PASSWORD = $PGPASSWORD
-          echo IDENTITY_POSTGRES_PASSWORD
+          echo $IDENTITY_POSTGRES_PASSWORD
