--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,10 +50,11 @@ jobs:
           wget https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem
           psql "host=$RDSHOST port=5432 dbname=identitydb user=stg-identity-user password=$PGPASSWORD" sslrootcert=global-bundle.pem -c "SELECT * FROM  pg_catalog.pg_tables "
           echo $RDSHOST
+          echo $PGPASSWORD
+          
+      - name: Set Environment Variables
         env:
-          IDENTITY_POSTGRES_PASSWORD: $PGPASSWORD
-        
-      - name: Test
+          IDENTITY_POSTGRES_PASSWORD:  $PGPASSWORD
         run: |
          echo ${{env.IDENTITY_POSTGRES_PASSWORD}}
          echo $IDENTITY_POSTGRES_PASSWORD
